--- a/TESTDJANGO/store/templates/store/product_list.html
+++ b/TESTDJANGO/store/templates/store/product_list.html
@@ -8,7 +8,7 @@
             {% for product in product_list %}
                 <li>
                     <a href="{{ product.get_absolute_url }}">{{ product.name }}</a> ({{ "$" }}{{product.price}})
-                    <a href="{% store:cart_add' pk=Product.pk %}"
+                    <a href=""
                        class="'btn btn-warning">Add To Cart</a>
                 </li>
             {% endfor %}
